--- a/CryptoMarket/index.html
+++ b/CryptoMarket/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Inside public/index.html -->
+    <link rel="png" href="%PUBLIC_URL%/icon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cryto Market</title>
   </head>
