--- a/CryptoMarket/index.html
+++ b/CryptoMarket/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Inside public/index.html -->
-    <link rel="png" href="%PUBLIC_URL%/icon.png" />
+    
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cryto Market</title>
@@ -13,3 +13,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+git 
